first db connection with ef and mysql

--- a/Pantry/appsettings.Development.json
+++ b/Pantry/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=60001;Database=Pantry;Uid=root;Pwd=Gr00veJ0nes;SslMode=none;AllowPublicKeyRetrieval=True;"
   }
 }
