added several migrations: suggest to delete db and recreate from scratch

--- a/Pantry/appsettings.Development.json
+++ b/Pantry/appsettings.Development.json
@@ -6,6 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=PantryPro;Uid=root;Pwd=root;"
+    //"DefaultConnection": "Server=localhost;Port=5432;Database=PantryPro;Uid=root;Pwd=root;"
+    "DefaultConnection": "Server=localhost;Port=5432;Database=PantryPro;Uid=postgres;Pwd=Polygon12!;"
   }
 }
